Upload category and product progress
